--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,3 +54,19 @@ jobs:
             **/allure-results/**
             **/target/surefire-reports/**
           if-no-files-found: warn
+
+      - name: Generate Allure HTML report
+        if: always()
+        run: |
+          set -e
+          wget -q https://github.com/allure-framework/allure2/releases/download/2.29.0/allure-2.29.0.zip
+          unzip -q allure-2.29.0.zip
+          ./allure-2.29.0/bin/allure generate **/allure-results --clean -o allure-report
+
+      - name: Upload Allure HTML
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: allure-html-${{ matrix.browser }}
+          path: allure-report/**
+          if-no-files-found: warn
